--- a/playbooks/NewUser.yaml
+++ b/playbooks/NewUser.yaml
@@ -7,7 +7,7 @@
       ansible.builtin.user:
         name: vrivero
         groups:
-          - sudo
+          - audio
         state: "present"
         shell: "/bin/bash"
         system: false
