--- a/playbooks/NewUser.yaml
+++ b/playbooks/NewUser.yaml
@@ -5,7 +5,7 @@
   tasks:
     - name: New User
       ansible.builtin.user:
-        name: "{{ username }}
+        name: "{{ username }}"
         groups:
           - audio
         state: "present"
