--- a/playbooks/Crowdstrike/New-agent.yml
+++ b/playbooks/Crowdstrike/New-agent.yml
@@ -1,9 +1,9 @@
 ---
 - hosts: 172.31.3.117
+  vars:
+    falcon_client_id: 320D1BF101394DE9A098F939B4389BED-67
   roles:
-  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike/falcon/roles/crowdstrike.falcon.falcon_install
+  - role: crowdstrike.falcon.falcon_install
     vars:
-      falcon_sensor_version: '6.54.0-15110'
-  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike/falcon/roles/crowdstrike.falcon.falcon_configure
-    vars:
-      falcon_cid: 320D1BF101394DE9A098F939B4389BED-67
+      falcon_sensor_version_decrement: 1
+  - role: crowdstrike.falcon.falcon_configure
