--- a/playbooks/Crowdstrike/New-agent.yml
+++ b/playbooks/Crowdstrike/New-agent.yml
@@ -3,7 +3,7 @@
   vars:
     falcon_client_id: 320D1BF101394DE9A098F939B4389BED-67
   roles:
-  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike.falcon.falcon_install
+  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike/falcon/roles/falcon_install
     vars:
       falcon_sensor_version_decrement: 1
-  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike.falcon.falcon_configure
+  - role: /opt/ansible/.ansible/collections/ansible_collections/crowdstrike/falcon/roles/falcon_configure
